# simple_short_links

./: .env  .flake8  .gitignore  Dockerfile  db.py  docker-compose.yml  main.py  pyproject.toml  readme.md  settings.py
migrations/: env.py
migrations/versions/: 35b5514a3a87_generate_changes.py  9c012cc8dfc2_generate_changes.py  a9f3e92d440c_generate_changes.py  ad4d38f7f49e_generate_changes.py
models/: link.py  user.py
routers/: deps.py  links.py  users.py
schemas/: link.py  user.py
scripts/: migrate.sh  start.sh  start_tests.sh
tests/: conftest.py  test_links.py  test_users.py  utils.py
utils/: links.py  users.py
